# sql-agent-techabbot

./: .gitignore  index.py  pyproject.toml  requirements.txt
utils/: faiss_index_meta.json  few_shots.py  prompt.py
