[project]
name = "sql-agent-v1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.1.0",
    "langchain>=1.1.2",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=3.2.0",
    "langchain-openai>=1.1.0",
    "pymysql>=1.1.2",
    "sentence-transformers>=5.1.2",
    "streamlit>=1.52.1",
]
